# ompl-release

./: .hg_archival.txt  0001-Added-a-package.xml-file.patch  0002-update-version.patch  bloom.conf  catkin.conf  debian.store  package.xml  patches.conf  stack.xml  stack.yaml
debian/: changelog  control  copyright  files  gbp.conf  ros-fuerte-ompl.substvars  rules
debian/patches/: debian-changes-0.9.6-0oneiric  series
debian/ros-fuerte-ompl/DEBIAN/: control  md5sums  postinst  postrm  shlibs
debian/ros-fuerte-ompl/opt/ros/fuerte/include/ompl/: config.h
debian/ros-fuerte-ompl/opt/ros/fuerte/include/ompl/base/: GoalSampleableRegion.h
debian/ros-fuerte-ompl/opt/ros/fuerte/lib/: libompl.so.0.9.6  libompl.so.2
src/ompl/extensions/ode/: ODEStateValidityChecker.h
