<?xml version="1.0"?>
<package>
  <name>ompl</name>
  <version>0.11.1002124</version>
  <description>OMPL is a free sampling-based motion planning library.</description>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>
  <license>BSD</license>

  <url type="website">http://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://bitbucket.org/ompl/ompl/issues</url>
  <url type="repository">https://bitbucket.org/ompl/ompl/</url>

  <author>Kavraki Lab</author>

  <build_depend>cmake</build_depend>
  <build_depend>boost</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <run_depend>boost</run_depend>
</package>
